--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -229,12 +229,13 @@
                  </xpath>
 
                  <xpath expr="//field[@name='description']" position="after">
-                     <field name="purchase_ids" readonly="1">
+                     <separator string="Purchase Order" attrs="{'invisible': [('state','!=', 'done')]}"/>
+                     <field name="purchase_ids" readonly="1" attrs="{'invisible': [('state','!=', 'done')]}">
                             <tree string="Purchase Order">
-                                <field name="complete_name" string="Reference"/>
+                                <field name="complete_name" string="Purchase Order No"/>
                                 <field name="date_order" string="Order Date"/>
-                                <field name="partner_id"/>
-                                <field name="state"/>
+                                <field name="partner_id" string="Vendor"/>
+                                <field name="state" string="Status"/>
                             </tree>
                             <form>
                                     <sheet>
