--- a/purchase_indonesia/views/inherit_stock_picking.xml
+++ b/purchase_indonesia/views/inherit_stock_picking.xml
@@ -16,6 +16,9 @@
                  <xpath expr="//field[@name='origin']" position="replace">
                      <field name="origin" invisible="1"/>
                  </xpath>
+                 <xpath expr="//field[@name='pack_operation_product_ids']" position="after">
+                     <field name="description" string="Description"/>
+                 </xpath>
                  <xpath expr="//field[@name='origin']" position="after">
                      <field name="validation_manager" invisible="1"/>
                      <field name="requested_by" string="Requester PP"/>
