[ADD] purchase_indonesia : add corection_purchase_request in purchase_tender
1. add function corection purchase request
2. approval in purchase_order from RO direct to budget

--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -15,6 +15,14 @@
                                 attrs="{'invisible': [('state', '=', 'draft')]}"
                                 >
                      </button>
+                     <button name="purchase_request_correction" type="object"
+                                class="oe_stat_button"
+                                string="Corection PP"
+                                icon ="fa-reply"
+                             attrs="{'invisible': [('state', '=', 'draft')]}"
+                             >
+
+                     </button>
                  </xpath>
              </field>
          </record>
